# gpu-free-ai

./: LICENSE  README.md  pyproject.toml
src/gpu_free_ai/: __init__.py  impl.py  importer.py
