[project]
name = "gpu-free-ai"
version = "0.2.0"
description = "all the features of AI with 100% compute efficiency and no hardware requirements"
authors = [
    {name = "sneakers-the-rat", email = "sneakers-the-rat@protonmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = "LicenseRef-DNE-1.0"
license-files = ["LICENSE"]

[project.urls]
repository = "https://github.com/sneakers-the-rat/gpu-free-ai"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
